add parsing keyword query parameter in search path

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 <data android:host="www.jisho.org" />
                 <data android:pathPrefix="/word/" />
                 <data android:pathPrefix="/sentences/" />
-                <data android:pathPrefix="/search/" />
+                <data android:pathPrefix="/search" />
             </intent-filter>
 
             <!-- Shared Text -->
