--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: jsdict
 description: A new Flutter project.
 publish_to: 'none'
 
-version: 1.2.2+9
+version: 1.2.3+10
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -33,6 +33,7 @@ dependencies:
   uni_links: ^0.5.1
   share_plus: ^8.0.2
   receive_sharing_intent: ^1.6.8
+  gif: ^2.3.0
 
 dev_dependencies:
   flutter_test:
