--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   provider: ^6.0.5
   expandable_text: ^2.3.0
+  dynamic_color: ^1.7.0
   shared_preferences: ^2.1.2
   audioplayers: ^6.0.0
   package_info_plus: ^6.0.0
