--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="io.github.petlyh.jsdict">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
+        tools:replace="android:label"
         android:label="@string/application_name"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
