--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: jsdict
 description: A new Flutter project.
 publish_to: 'none'
 
-version: 1.2.9+26
+version: 1.2.9+27
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -33,11 +33,11 @@ dependencies:
   uni_links: ^0.5.1
   share_plus: ^8.0.2
   receive_sharing_intent: ^1.6.8
-  gif: ^2.3.0
   async: ^2.11.0
   flutter_ankidroid:
     git:
       url: https://github.com/3nws/flutter_ankidroid
+  path_drawing: ^1.0.1
 
 dev_dependencies:
   flutter_test:
