--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
         applicationId "io.github.petlyh.jsdict"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -56,6 +56,21 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+        }
+    }
+
+    
+    flavorDimensions "default"
+    productFlavors {
+        base {
+            dimension "default"
+            resValue "string", "app_name", "Base flavor"
+            applicationIdSuffix ".base"
+        }
+        ocr {
+            dimension "default"
+            resValue "string", "app_name", "OCR flavor"
+            applicationIdSuffix ".ocr"
         }
     }
 }
