--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: jsdict
 description: A new Flutter project.
 publish_to: 'none'
 
-version: 1.3.0+32
+version: 1.3.0+3005241
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -42,6 +42,7 @@ dependencies:
     git:
       url: https://github.com/3nws/tesseract_ocr
   image_picker: ^1.1.1
+  image_cropper: ^5.0.1
 
 dev_dependencies:
   flutter_test:
