--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
       url: https://github.com/3nws/tesseract_ocr
   image_picker: ^1.1.1
   image_cropper: ^5.0.1
+  appcheck: ^1.1.0
+  android_intent_plus: ^5.0.2
+  app_settings: ^5.1.1
 
 dev_dependencies:
   flutter_test:
