--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   receive_sharing_intent: ^1.6.8
   async: ^2.11.0
   flutter_ankidroid:
-    git:
+    git: # fork fixes crash with file pickers
       url: https://github.com/3nws/flutter_ankidroid
   path_drawing: ^1.0.1
   flutter_tesseract_ocr:
-    git:
+    git: # fork fixes hanging ui
       url: https://github.com/3nws/tesseract_ocr
   image_picker: ^1.1.1
   image_cropper: ^5.0.1
