--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
   assets:
     - assets/kanjivg/LICENSE.kanjivg.txt
     - assets/kanjivg/data/
-    - assets/anki-icon.svg
+    - assets/anki-icon-monochrome.svg
     - path: assets/tessdata_config.json
       flavors:
         - ocr
